typescript/checker/tests/conformance/expressions/typeGuards/typeGuardTautologicalConsistiency.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            18,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardTautologicalConsistiency.ts:1:5
  |
1 | let stringOrNumber: string | number;
  |     ^^^^^^^^^^^^^^

